test/res/error/cd3_cmp2.tmp
cd: no such file or directory: coucou
